fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -68,11 +68,16 @@ li {
 .test {
   position: absolute;
   right: 0%;
-  top: 9em;
+  top: 9.5em;
 }
 
 .person {
   padding-top: 17em;
+}
+
+.couch {
+  height: 100%;
+  max-height: 30em;
 }
 
 @media only screen and (min-width: 50em){
